meta-digi-arm: simplify flash images generation
We inherited from DEL the requirement to build more than one flash image
for the same rootfs contents depending on the EBS of the flash chip.

Yocto does not have support to generate more than one flash image so we
had to create functions in the image_types_digi bbclass to provide this
feature.

This commit removes that functionality and uses the standard yocto
support to generate ubifs and jffs2 flash images. The way to customize
the flash parameters is via EXTRA_IMAGECMD_jffs2 and MKUBIFS_ARGS
variables. In our case those variables are already set depending on the
different hardware variants.

https://jira.digi.com/browse/DEL-232

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -12,19 +12,7 @@ KERNEL_DEVICETREE = "imx28-${MACHINE}.dtb"
 # create a symlink to the correct device.
 SERIAL_CONSOLES = "115200;ttyS0"
 
-#################################################
-## Flash parameters for JFFS2 and UBIFS images ##
-#################################################
-#   partition size (KiB)
-#   physical eraseblock size (KiB)
-#   logical eraseblock size (bytes)
-#   minimum input/output size (bytes)
-#   sub-page size (bytes)
-#
-# PEB, LEB, MIO and SUB might be a list of comma-separated values
-#
-FLASH_PSZ = "262144"
-FLASH_PEB = "128"
-FLASH_LEB = "126976"
-FLASH_MIO = "2048"
-FLASH_SUB = "-"
+# FLASH parameters
+MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 2047"
+EXTRA_IMAGECMD_jffs2 ?= "-l -e 128 -n"
+JFFS2_SUM_EXTRA_ARGS ?= "${EXTRA_IMAGECMD_jffs2}"
