--- a/meta-digi-arm/conf/machine/ccimx53js.conf
+++ b/meta-digi-arm/conf/machine/ccimx53js.conf
@@ -7,19 +7,11 @@ include conf/machine/include/ccimx53.inc
 
 SERIAL_CONSOLES = "115200;ttymxc0"
 
-#################################################
-## Flash parameters for JFFS2 and UBIFS images ##
-#################################################
-#   partition size (KiB)
-#   physical eraseblock size (KiB)
-#   logical eraseblock size (bytes)
-#   minimum input/output size (bytes)
-#   sub-page size (bytes)
-#
-# PEB, LEB, MIO and SUB might be a list of comma-separated values
-#
-FLASH_PSZ = "524288"
-FLASH_PEB = "128,512"
-FLASH_LEB = "129024,520192"
-FLASH_MIO = "2048,4096"
-FLASH_SUB = "512,1024"
+# Per-variant FLASH parameters
+MKUBIFS_ARGS ?= "-m 2048 -e 129024 -c 4095"
+MKUBIFS_ARGS_4k ?= "-m 4096 -e 520192 -c 1023"
+MKUBIFS_ARGS_e4k ?= "-m 4096 -e 520192 -c 1023"
+EXTRA_IMAGECMD_jffs2 ?= "-l -e 128 -n"
+EXTRA_IMAGECMD_jffs2_4k ?= "-l -e 512 -n"
+EXTRA_IMAGECMD_jffs2_e4k ?= "-l -e 512 -n"
+JFFS2_SUM_EXTRA_ARGS ?= "${EXTRA_IMAGECMD_jffs2}"
