meta-digi-arm: rework udev extra rules
In Yocto 1.7 meta-fsl-arm replaced udev-extraconf bbappend with a new
package (udev-rules-imx). So we need to adapt our own bbappend to these
changes so all the needed udev rules are in place.

https://jira.digi.com/browse/DEL-1336

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -9,6 +9,9 @@ KERNEL_DEVICETREE = "imx6q-${MACHINE}.dtb"
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
+# Bluetooth tty
+BT_TTY ?= "ttymxc1"
+
 # U-Boot script to be copied to the SD image
 BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
 
