--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -8,9 +8,13 @@ IMXBOOTLETS_MACHINE = "CCARDIMX28JS"
 
 KERNEL_DEVICETREE = "imx28-${MACHINE}.dtb"
 
-# Use standard serial port name and let device handlers (mdev, udev)
-# create a symlink to the correct device.
-SERIAL_CONSOLES = "115200;ttyS0"
+# Configure the serial console for kernel 2.x and 3.x and let the
+# post-installation script drop the not-supported one on first boot
+SERIAL_CONSOLES ?= "115200;ttyAM0 115200;ttyAMA0"
+SERIAL_CONSOLES_CHECK ?= "${SERIAL_CONSOLES}"
+
+# Bluetooth tty
+BT_TTY ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttySP0', 'ttyAPP0', d)}"
 
 # FLASH parameters
 MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 2047"
