--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,7 +5,7 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
-KERNEL_DEVICETREE = "imx6q-${MACHINE}.dtb"
+KERNEL_DEVICETREE = "imx6q-${MACHINE}.dtb imx6q-${MACHINE}-ldo.dtb"
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
