meta-digi: support generation of sdcard images for ccardimx28js
https://jira.digi.com/browse/DEL-197

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -16,6 +16,15 @@ SERIAL_CONSOLES_CHECK ?= "${SERIAL_CONSOLES}"
 # Bluetooth tty
 BT_TTY ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttySP0', 'ttyAPP0', d)}"
 
+# U-Boot script to be copied to the SD image
+BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
+
+# Rootfs image for rootfs partition in sdcard image
+SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
+
+# Build sdcard image for ccardimx28js
+IMAGE_FSTYPES += "sdcard"
+
 # FLASH parameters
 MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 2047"
 EXTRA_IMAGECMD_jffs2 ?= "-l -e 128 -n"
