ccardimx28js: configure the serial console depending on kernel version
SERIAL_CONSOLES_CHECK is new functionality provided by Yocto, but it
needs '/proc/consoles' supported by the kernel. Our kernel 2.6.35 does
not support '/proc/consoles' so rework the serial console configuration
to work with both kernels (2.6.35 and 3.10).

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -8,10 +8,8 @@ IMXBOOTLETS_MACHINE = "CCARDIMX28JS"
 
 KERNEL_DEVICETREE = "imx28-${MACHINE}.dtb"
 
-# Configure the serial console for kernel 2.x and 3.x and let the
-# post-installation script drop the not-supported one on first boot
-SERIAL_CONSOLES ?= "115200;ttyAM0 115200;ttyAMA0"
-SERIAL_CONSOLES_CHECK ?= "${SERIAL_CONSOLES}"
+# Serial console
+SERIAL_CONSOLES ?= "115200;${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
 
 # Bluetooth tty
 BT_TTY ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttySP0', 'ttyAPP0', d)}"
