meta-digi-arm: configure the console for ccardimx28js dynamically
Revert to the old way of setting the console for ccardimx28js. Configure
the console on the generic ttyS0 port name and let the device managers
create a symbolic link to the correct device at runtime.

Trying to set it statically at compile time lead to some side effects
with some packages not being recompiled after a change of the preferred
kernel version in the project's local.conf (e.g. udev-extraconf and
sysvinit-inittab).

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -11,8 +11,13 @@ KERNEL_DEVICETREE = "imx28-${MACHINE}.dtb"
 # Serial console
 SERIAL_CONSOLES ?= "115200;${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
 
-# Bluetooth tty
-BT_TTY ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttySP0', 'ttyAPP0', d)}"
+# Use standard serial port name and let device handlers (mdev, udev)
+# create a symlink to the correct device.
+SERIAL_CONSOLES = "115200;ttyS0"
+
+# Console and bluetooth tty's
+BT_TTY  ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttySP0', 'ttyAPP0', d)}"
+CON_TTY ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
 
 # U-Boot script to be copied to the SD image
 BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
