meta-digi-arm: support variants for ccimx6sbc
https://jira.digi.com/browse/DEL-1359

Signed-off-by: Javier Viguera <javier.viguera@digi.com>
(cherry picked from commit 015d029255eb407cca4c986562a304aef7de3940)

--- a/sdk/config/ccimx6sbc/local.conf.sample
+++ b/sdk/config/ccimx6sbc/local.conf.sample
@@ -36,7 +36,7 @@
 #MACHINE ??= "qemux86"
 
 MACHINE = "ccimx6sbc"
-MACHINE_VARIANT = "wb"
+MACHINE_VARIANT = "wbq1024"
 
 #
 # Use Digi's internal git repositories
