--- a/sdk/config/ccimx6sbc/local.conf.sample
+++ b/sdk/config/ccimx6sbc/local.conf.sample
@@ -36,6 +36,22 @@
 #MACHINE ??= "qemux86"
 
 MACHINE = "ccimx6sbc"
+
+#
+# Supported variants
+#
+# Maintain in sync with the same table in platform machine config file.
+#
+# Name        WiFi[w]    BT[b]    Proc[q|dl]      DDR[1024|512|256]
+# -----------------------------------------------------------------
+# wbq1024     Y          Y        quad/dual          1024MiB          (0x01,0x02,0x04)
+# wbq512      Y          Y        quad/dual           512MiB          (0x03,0x06)
+# wq1024      Y          N        quad/dual          1024MiB          (0x05)
+# wdl256      Y          N        duallite/solo       256MiB          (0x07)
+# q512        N          N        quad/dual           512MiB          (0x08)
+# dl256       N          N        duallite/solo       256MiB          (0x09)
+# wdl512      Y          N        duallite/solo       512MiB          (0x0A)
+# wbdl1024    Y          Y        duallite/solo      1024MiB          (0x0B)
 MACHINE_VARIANT = "wbq1024"
 
 #
