meta-digi-arm: support variants for ccimx6sbc
This completes the support for ccimx6sbc variants:

* support device tree variants
* split variants '0x01,0x02,0x04' group in two different groups (with or
  without kinetis)

https://jira.digi.com/browse/DEL-1359

Signed-off-by: Javier Viguera <javier.viguera@digi.com>
(cherry picked from commit 3f20015411f4e270b2e2c8faf292678c75ff2aff)

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,7 +5,7 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
-KERNEL_DEVICETREE = "imx6q-${MACHINE}.dtb imx6q-${MACHINE}-ldo.dtb"
+KERNEL_DEVICETREE = "i${CPU_FAMILY}-${MACHINE}.dtb i${CPU_FAMILY}-${MACHINE}-ldo.dtb"
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
