meta-digi: rename DIGI_MIRROR to DIGI_PKG_SRC
It has never been a mirror of upstream packages.

It's the URL of packages needed for the BSP. These packages are mostly
Digi specific and not provided in any other location.

https://jira.digi.com/browse/DEL-1493

Signed-off-by: Javier Viguera <javier.viguera@digi.com>
(cherry picked from commit d4cf9a88c9db39c6ecfd0099437d82af81c96e85)

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -21,7 +21,7 @@ DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
 DIGI_MTK_GIT ?= "git://stash.digi.com/"
 DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
-DIGI_MIRROR  ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
+DIGI_PKG_SRC ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
 
 DIGI_GITHUB_GIT ?= "git://github.com/digidotcom"
 
