meta-digi-dey: add Digi mirror
Add a Digi mirror for packages that have dissapeared upstream.

https://jira.digi.com/browse/DEL-1493

Signed-off-by: Javier Viguera <javier.viguera@digi.com>
(cherry picked from commit 0a01d3a5d0203d1ce75482677739bf0113da624d)

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -14,6 +14,14 @@ BBFILE_COLLECTIONS += "dey"
 BBFILE_PATTERN_dey := "^${LAYERDIR}/"
 BBFILE_PRIORITY_dey = "6"
 
+# Digi mirror for packages vanished upstream
+DIGI_MIRROR ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/mirror/"
+MIRRORS += "\
+ftp://.*/.*      ${DIGI_MIRROR} \n \
+http://.*/.*     ${DIGI_MIRROR} \n \
+https://.*/.*    ${DIGI_MIRROR} \n \
+"
+
 # This is Digi's General license agreement.
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 
