--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,7 +1,7 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "1.7"
-DISTRO_CODENAME = "dizzy"
+DISTRO_VERSION = "1.8-git"
+DISTRO_CODENAME = "fido"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'}"
 
@@ -10,7 +10,6 @@ MAINTAINER = "Digi Support <support@digi.com>"
 TARGET_VENDOR = "-dey"
 
 LOCALCONF_VERSION = "1"
-LAYER_CONF_VERSION ?= "6"
 
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
@@ -41,24 +40,23 @@ IMAGE_FEATURES[validitems] += "dey-test"
 PREFERRED_PROVIDER_jpeg ?= "jpeg"
 PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
 
-PREFERRED_VERSION_linux-yocto ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemumips ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemumips64 ?= "3.14%"
-PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.14%"
+PREFERRED_VERSION_linux-yocto ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemumips ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemumips64 ?= "3.19%"
+PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.19%"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
-
-EXTRAOPKGCONFIG = "poky-feed-config-opkg"
 
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
 
 POKYQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPLv3", "", "packagegroup-core-device-devel",d)}"
 DISTRO_EXTRA_RDEPENDS_append_qemuarm = " ${POKYQEMUDEPS}"
+DISTRO_EXTRA_RDEPENDS_append_qemuarm64 = " ${POKYQEMUDEPS}"
 DISTRO_EXTRA_RDEPENDS_append_qemumips = " ${POKYQEMUDEPS}"
 DISTRO_EXTRA_RDEPENDS_append_qemuppc = " ${POKYQEMUDEPS}"
 DISTRO_EXTRA_RDEPENDS_append_qemux86 = " ${POKYQEMUDEPS}"
@@ -66,8 +64,8 @@ DISTRO_EXTRA_RDEPENDS_append_qemux86-64 = " ${POKYQEMUDEPS}"
 
 TCLIBCAPPEND = ""
 
-QEMU_TARGETS ?= "arm i386 mips mipsel ppc x86_64"
-# Other QEMU_TARGETS "mips64 mips64el sh4"
+QEMU_TARGETS ?= "arm aarch64 i386 mips mipsel mips64 ppc x86_64"
+# Other QEMU_TARGETS "mips64el sh4"
 
 # Support MP3 audio files
 COMMERCIAL_AUDIO_PLUGINS ?= "gst-plugins-ugly-mad gst-plugins-ugly-mpegaudioparse"
@@ -104,26 +102,16 @@ CONNECTIVITY_CHECK_URIS ?= " \
              http://bugzilla.yoctoproject.org/report.cgi"
 
 SANITY_TESTED_DISTROS ?= " \
-            Poky-1.4 \n \
-            Poky-1.5 \n \
-            Poky-1.6 \n \
-            Poky-1.7 \n \
+            poky-1.6 \n \
+            poky-1.7 \n \
             Ubuntu-12.04 \n \
-            Ubuntu-13.10 \n \
             Ubuntu-14.04 \n \
-            Fedora-19 \n \
+            Ubuntu-14.10 \n \
             Fedora-20 \n \
-            CentOS-6.4 \n \
-            CentOS-6.5 \n \
-            Debian-7.0 \n \
-            Debian-7.1 \n \
-            Debian-7.2 \n \
-            Debian-7.3 \n \
-            Debian-7.4 \n \
-            Debian-7.5 \n \
-            Debian-7.6 \n \
-            Debian-7.7 \n \
-            SUSE-LINUX-12.2 \n \
+            CentOS-6.* \n \
+            CentOS-7.* \n \
+            Debian-7.* \n \
+            Debian-8.* \n \
             openSUSE-project-12.3 \n \
             openSUSE-project-13.1 \n \
             "
@@ -136,19 +124,17 @@ BB_SIGNATURE_HANDLER ?= 'OEBasicHash'
 # that breaks the format and have been previously discussed on the mailing list 
 # with general agreement from the core team.
 #
-OELAYOUT_ABI = "8"
+OELAYOUT_ABI = "10"
 
 # add poky sanity bbclass
 INHERIT += "poky-sanity"
 
 # QA check settings - a little stricter than the OE-Core defaults
-WARN_QA = "textrel files-invalid incompatible-license xorg-driver-abi libdir \
-           unknown-configure-option build-deps"
-ERROR_QA = "dev-so debug-deps dev-deps debug-files arch pkgconfig la perms \
-            useless-rpaths rpaths staticdev ldflags pkgvarcheck already-stripped \
-            compile-host-path dep-cmp installed-vs-shipped install-host-path \
-            packages-list perm-config perm-line perm-link pkgv-undefined \
-            pn-overrides split-strip var-undefined version-going-backwards"
+WARN_TO_ERROR_QA = "already-stripped compile-host-path install-host-path \
+                    installed-vs-shipped ldflags pn-overrides rpaths staticdev \
+                    useless-rpaths"
+WARN_QA_remove = "${WARN_TO_ERROR_QA}"
+ERROR_QA_append = " ${WARN_TO_ERROR_QA}"
 
 # Mask unused kernel recipes from "meta-fsl-arm" to clean warning
 # WARNING: Unable to get checksum for linux-imx SRC_URI entry defconfig
