meta-digi-dey: Add support for bluez5
https://jira.digi.com/browse/DEL-1941

Signed-off-by: Isaac Hermida <isaac.hermida@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -12,7 +12,7 @@ TARGET_VENDOR = "-dey"
 LOCALCONF_VERSION = "1"
 
 # Override these in poky based distros
-POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
+POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland bluez5"
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
 POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
