meta-digi-arm: fix IMAGE_FSTYPES for MX5 platforms
The IMAGE_FSTYPES variable for ccimx51js and ccimx53js was not correct,
it was taking the default one from Poky (IMAGE_FSTYPES="tar.gz")
instead of the one in 'imx-digi-base.inc' file. This happened because we
were using the weak '??=' assignement while the default in Poky was
using '?='.

Also rework a bit how this variable is set, so it is easily overriden on
project config files or initramfs recipes.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -22,11 +22,9 @@ CON_TTY ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
 # U-Boot script to be copied to the SD image
 BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
 
-# Rootfs image for rootfs partition in sdcard image
+# Flash image types
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
-
-# Build sdcard image for ccardimx28js
-IMAGE_FSTYPES += "sdcard"
+IMAGE_FSTYPES ?= "jffs2.sum sdcard tar.bz2 ubifs"
 
 # FLASH parameters
 MKUBIFS_ARGS ?= "-m 2048 -e 126976 -c 2047"
