--- a/meta-digi-arm/conf/machine/ccimx53js.conf
+++ b/meta-digi-arm/conf/machine/ccimx53js.conf
@@ -7,6 +7,9 @@ include conf/machine/include/ccimx53.inc
 
 SERIAL_CONSOLES = "115200;ttymxc0"
 
+# Flash image types
+IMAGE_FSTYPES ?= "jffs2.sum tar.bz2 ubifs"
+
 # Per-variant FLASH parameters
 MKUBIFS_ARGS ?= "-m 2048 -e 129024 -c 4095"
 MKUBIFS_ARGS_4k ?= "-m 4096 -e 520192 -c 1023"
