--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -18,4 +18,6 @@ BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
 # Boot partition size for FAT image generation, 64MiB
 BOARD_BOOTIMAGE_PARTITION_SIZE ?= "67108864"
 
+# Flash image types
+SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
 IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2"
