--- a/meta-digi-arm/conf/machine/ccimx51js.conf
+++ b/meta-digi-arm/conf/machine/ccimx51js.conf
@@ -6,6 +6,9 @@ include conf/machine/include/ccimx51.inc
 
 SERIAL_CONSOLES = "38400;ttymxc1"
 
+# Flash image types
+IMAGE_FSTYPES ?= "jffs2.sum tar.bz2 ubifs"
+
 # Per-variant FLASH parameters
 MKUBIFS_ARGS ?= "-m 2048 -e 129024 -c 4095"
 MKUBIFS_ARGS_agv4k ?= "-m 4096 -e 520192 -c 1023"
