--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,7 +5,7 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
-KERNEL_DEVICETREE = "i${CPU_FAMILY}-${MACHINE}.dtb i${CPU_FAMILY}-${MACHINE}-ldo-bypass.dtb"
+KERNEL_DEVICETREE = "imx6q-ccimx6sbc.dtb imx6q-ccimx6sbc-ldo-bypass.dtb"
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
