meta-digi-arm: add support for other CC6 hardware variants
https://jira.digi.com/browse/DEL-1569

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,7 +5,16 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
-KERNEL_DEVICETREE = "imx6q-ccimx6sbc.dtb imx6q-ccimx6sbc-ldo-bypass.dtb"
+KERNEL_DEVICETREE = " \
+    imx6dl-ccimx6sbc.dtb \
+    imx6dl-ccimx6sbc-w.dtb \
+    imx6dl-ccimx6sbc-mw.dtb \
+    imx6dl-ccimx6sbc-mwb.dtb \
+    imx6q-ccimx6sbc.dtb \
+    imx6q-ccimx6sbc-w.dtb \
+    imx6q-ccimx6sbc-wb.dtb \
+    imx6q-ccimx6sbc-wb-ldo-bypass.dtb \
+"
 
 SERIAL_CONSOLES = "115200;ttymxc3"
 
