meta-digi-arm: adapt machines to new u-boot configure system
Use Yocto's UBOOT_CONFIG new functionality to select the u-boot
configuration to build.

https://jira.digi.com/browse/DEL-1584

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -5,6 +5,10 @@
 # Contains the ConnectCore 6 module.
 include conf/machine/include/ccimx6.inc
 
+# U-Boot configurations
+UBOOT_CONFIG ??= "ccimx6qsbc"
+UBOOT_CONFIG[ccimx6qsbc] = "ccimx6qsbc_config"
+
 KERNEL_DEVICETREE = " \
     imx6dl-ccimx6sbc.dtb \
     imx6dl-ccimx6sbc-w.dtb \
