meta-digi-arm: build all CC6 u-boot variants
https://jira.digi.com/browse/DEL-1569

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -6,7 +6,12 @@
 include conf/machine/include/ccimx6.inc
 
 # U-Boot configurations
-UBOOT_CONFIG ??= "ccimx6qsbc"
+# Last one is the default (the one the symlinks point at)
+UBOOT_CONFIG ??= "ccimx6dlsbc256MB ccimx6dlsbc512MB ccimx6dlsbc ccimx6qsbc512MB ccimx6qsbc"
+UBOOT_CONFIG[ccimx6dlsbc256MB] = "ccimx6dlsbc256MB_config"
+UBOOT_CONFIG[ccimx6dlsbc512MB] = "ccimx6dlsbc512MB_config"
+UBOOT_CONFIG[ccimx6dlsbc] = "ccimx6dlsbc_config"
+UBOOT_CONFIG[ccimx6qsbc512MB] = "ccimx6qsbc512MB_config"
 UBOOT_CONFIG[ccimx6qsbc] = "ccimx6qsbc_config"
 
 KERNEL_DEVICETREE = " \
