meta-digi-arm: set BOARD_BOOTIMAGE_PARTITION_SIZE in KiB
This will allow in following commit to use the same VFAT boot image for
EMMC and SD. Until now we were creating different boot images for EMMC
and SD card images.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>
(cherry picked from commit 13e9ec7608d42430c2a01a728d030752a71f7948)

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -33,8 +33,8 @@ BT_TTY ?= "ttymxc1"
 # U-Boot script to be copied to the SD image
 BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
 
-# Boot partition size for FAT image generation, 64MiB
-BOARD_BOOTIMAGE_PARTITION_SIZE ?= "67108864"
+# Boot partition size in KiB, (default 64MiB)
+BOARD_BOOTIMAGE_PARTITION_SIZE ?= "65536"
 
 # Flash image types
 SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
