meta-digi-arm: rework SD card generation class
This is needed in the context of CC6 variants 0x7 and 0x9 (EMMC-less).

Changes:

* Do not use 'meta-fsl-arm' image generation class: removed include and
  override SDCARD generation function
* Use same VFAT boot image for EMMC and SD card. The u-boot bootscript
  has been adapted to be able to boot Linux from both SD and EMMC.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>
(cherry picked from commit 8b8456b8fd90facd92dfc87632effa582ca60475)

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -27,10 +27,9 @@ BT_TTY  ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttySP0', 'ttyAPP0', d)}"
 CON_TTY ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
 
 # U-Boot script to be copied to the SD image
-BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
+BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
-SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
 IMAGE_FSTYPES ?= "jffs2.sum sdcard tar.bz2 ubifs"
 
 # FLASH parameters
