--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -30,12 +30,8 @@ SERIAL_CONSOLES = "115200;ttymxc3"
 # Bluetooth tty
 BT_TTY ?= "ttymxc1"
 
-# U-Boot script to be copied to the SD image
-BOOT_SCRIPTS = "boot-sd.scr:boot.scr"
-
-# Boot partition size in KiB, (default 64MiB)
-BOARD_BOOTIMAGE_PARTITION_SIZE ?= "65536"
+# U-Boot script to be copied to the boot image
+BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
-SDCARD_ROOTFS ?= "${DEPLOY_DIR_IMAGE}/${IMAGE_NAME}.rootfs.ext4"
 IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2"
