--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -14,7 +14,7 @@ UBOOT_CONFIG[ccimx6dlsbc] = "ccimx6dlsbc_config"
 UBOOT_CONFIG[ccimx6qsbc512MB] = "ccimx6qsbc512MB_config"
 UBOOT_CONFIG[ccimx6qsbc] = "ccimx6qsbc_config"
 
-KERNEL_DEVICETREE = " \
+KERNEL_DEVICETREE ?= " \
     imx6dl-ccimx6sbc.dtb \
     imx6dl-ccimx6sbc-w.dtb \
     imx6dl-ccimx6sbc-mw.dtb \
