meta-digi-arm: remove support for kernel 2.6.35 on ccardimx28js
https://jira.digi.com/browse/DEL-1747

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccardimx28js.conf
+++ b/meta-digi-arm/conf/machine/ccardimx28js.conf
@@ -16,15 +16,10 @@ UBOOT_CONFIG[ccardimx28js_360MHz] = "ccardimx28js_360MHz_config"
 KERNEL_DEVICETREE = "imx28-${MACHINE}.dtb"
 
 # Serial console
-SERIAL_CONSOLES ?= "115200;${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
+SERIAL_CONSOLES = "115200;ttyAMA0"
 
-# Use standard serial port name and let device handlers (mdev, udev)
-# create a symlink to the correct device.
-SERIAL_CONSOLES = "115200;ttyS0"
-
-# Console and bluetooth tty's
-BT_TTY  ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttySP0', 'ttyAPP0', d)}"
-CON_TTY ?= "${@base_conditional('IS_KERNEL_2X', '1' , 'ttyAM0', 'ttyAMA0', d)}"
+# Bluetooth tty
+BT_TTY ?= "ttyAPP0"
 
 # U-Boot script to be copied to the SD image
 BOOT_SCRIPTS = "boot.scr:boot.scr"
