--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -15,10 +15,8 @@ UBOOT_CONFIG[ccimx6qsbc512MB] = "ccimx6qsbc512MB_config"
 UBOOT_CONFIG[ccimx6qsbc] = "ccimx6qsbc_config"
 
 KERNEL_DEVICETREE ?= " \
-    imx6dl-ccimx6sbc.dtb \
     imx6dl-ccimx6sbc-w.dtb \
-    imx6dl-ccimx6sbc-mw.dtb \
-    imx6dl-ccimx6sbc-mwb.dtb \
+    imx6dl-ccimx6sbc-wb.dtb \
     imx6q-ccimx6sbc.dtb \
     imx6q-ccimx6sbc-w.dtb \
     imx6q-ccimx6sbc-wb.dtb \
