meta-digi: remove automatic acceptance of FSL EULA
https://jira.digi.com/browse/DEL-1734

Signed-off-by: Javier Viguera <javier.viguera@digi.com>
(cherry picked from commit 35a78b13f72963205dc1ae1e05ee851ca6cc4f28)

--- a/sdk/config/ccardimx28js/local.conf.sample
+++ b/sdk/config/ccardimx28js/local.conf.sample
@@ -257,3 +257,8 @@ CONF_VERSION = "1"
 # Enable local PR server
 #
 PRSERV_HOST = "localhost:0"
+
+#
+# Some libraries and packages are covered by Freescale EULA
+#
+#ACCEPT_FSL_EULA = "1"
