meta-digi: cosmetic, no functional change
Signed-off-by: Javier Viguera <javier.viguera@digi.com>
(cherry picked from commit b52786156a43eb7b3c51a114797be5bf2896f313)

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -9,10 +9,8 @@ BBFILE_COLLECTIONS += "digi-arm"
 BBFILE_PATTERN_digi-arm := "^${LAYERDIR}/"
 BBFILE_PRIORITY_digi-arm = "5"
 
-# This is Digi's General license agreement.
+# Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
-
-# This is Digi's Open Source license agreement.
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
 
 DIGI_LOG_GIT ?= "git://log-sln-git.digi.com/"
