--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -7,12 +7,13 @@ include conf/machine/include/ccimx6.inc
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx6dlsbc256MB ccimx6dlsbc512MB ccimx6dlsbc ccimx6qsbc512MB ccimx6qsbc"
-UBOOT_CONFIG[ccimx6dlsbc256MB] = "ccimx6dlsbc256MB_config"
-UBOOT_CONFIG[ccimx6dlsbc512MB] = "ccimx6dlsbc512MB_config"
-UBOOT_CONFIG[ccimx6dlsbc] = "ccimx6dlsbc_config"
-UBOOT_CONFIG[ccimx6qsbc512MB] = "ccimx6qsbc512MB_config"
-UBOOT_CONFIG[ccimx6qsbc] = "ccimx6qsbc_config"
+UBOOT_CONFIG ??= "ccimx6dlsbc256MB ccimx6dlsbc512MB ccimx6dlsbc ccimx6qsbc2GB ccimx6qsbc512MB ccimx6qsbc"
+UBOOT_CONFIG[ccimx6dlsbc256MB] = "ccimx6dlsbc256MB_defconfig"
+UBOOT_CONFIG[ccimx6dlsbc512MB] = "ccimx6dlsbc512MB_defconfig"
+UBOOT_CONFIG[ccimx6dlsbc] = "ccimx6dlsbc_defconfig"
+UBOOT_CONFIG[ccimx6qsbc2GB] = "ccimx6qsbc2GB_defconfig"
+UBOOT_CONFIG[ccimx6qsbc512MB] = "ccimx6qsbc512MB_defconfig"
+UBOOT_CONFIG[ccimx6qsbc] = "ccimx6qsbc_defconfig"
 
 KERNEL_DEVICETREE ?= " \
     imx6dl-ccimx6sbc.dtb \
