--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -11,6 +11,9 @@ TARGET_VENDOR = "-dey"
 
 LOCALCONF_VERSION = "1"
 
+# Name the build with the timestamp used in the name of the images
+BUILDNAME = "${DATE}${TIME}"
+
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
 POKY_DEFAULT_EXTRA_RDEPENDS = "packagegroup-dey-core"
