--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -1,7 +1,7 @@
 DISTRO = "dey"
 DISTRO_NAME = "Digi Embedded Yocto"
-DISTRO_VERSION = "1.8-git"
-DISTRO_CODENAME = "fido"
+DISTRO_VERSION = "2.0-git"
+DISTRO_CODENAME = "jethro"
 SDK_VENDOR = "-deysdk"
 SDK_VERSION := "${@'${DISTRO_VERSION}'}"
 
@@ -10,9 +10,6 @@ MAINTAINER = "Digi Support <support@digi.com>"
 TARGET_VENDOR = "-dey"
 
 LOCALCONF_VERSION = "1"
-
-# Name the build with the timestamp used in the name of the images
-BUILDNAME = "${DATE}${TIME}"
 
 # Override these in poky based distros
 POKY_DEFAULT_DISTRO_FEATURES = "largefile opengl ptest multiarch wayland"
@@ -40,13 +37,13 @@ FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 PREFERRED_PROVIDER_jpeg ?= "jpeg"
 PREFERRED_PROVIDER_jpeg_armv7a ?= "libjpeg-turbo"
 
-PREFERRED_VERSION_linux-yocto ?= "3.19%"
-PREFERRED_VERSION_linux-yocto_qemux86 ?= "3.19%"
-PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "3.19%"
-PREFERRED_VERSION_linux-yocto_qemuarm ?= "3.19%"
-PREFERRED_VERSION_linux-yocto_qemumips ?= "3.19%"
-PREFERRED_VERSION_linux-yocto_qemumips64 ?= "3.19%"
-PREFERRED_VERSION_linux-yocto_qemuppc ?= "3.19%"
+PREFERRED_VERSION_linux-yocto ?= "4.1%"
+PREFERRED_VERSION_linux-yocto_qemux86 ?= "4.1%"
+PREFERRED_VERSION_linux-yocto_qemux86-64 ?= "4.1%"
+PREFERRED_VERSION_linux-yocto_qemuarm ?= "4.1%"
+PREFERRED_VERSION_linux-yocto_qemumips ?= "4.1%"
+PREFERRED_VERSION_linux-yocto_qemumips64 ?= "4.1%"
+PREFERRED_VERSION_linux-yocto_qemuppc ?= "4.1%"
 
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
@@ -54,7 +51,7 @@ SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 DISTRO_EXTRA_RDEPENDS += " ${POKY_DEFAULT_EXTRA_RDEPENDS}"
 DISTRO_EXTRA_RRECOMMENDS += " ${POKY_DEFAULT_EXTRA_RRECOMMENDS}"
 
-POKYQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPLv3", "", "packagegroup-core-device-devel",d)}"
+POKYQEMUDEPS = "${@bb.utils.contains("INCOMPATIBLE_LICENSE", "GPL-3.0", "", "packagegroup-core-device-devel",d)}"
 DISTRO_EXTRA_RDEPENDS_append_qemuarm = " ${POKYQEMUDEPS}"
 DISTRO_EXTRA_RDEPENDS_append_qemuarm64 = " ${POKYQEMUDEPS}"
 DISTRO_EXTRA_RDEPENDS_append_qemumips = " ${POKYQEMUDEPS}"
@@ -81,7 +78,6 @@ gitsm://.*/.* http://downloads.yoctoproject.org/mirror/sources/ \n \
 hg://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
 osc://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 p4://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n \
-svk://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n \
 svn://.*/.*   http://downloads.yoctoproject.org/mirror/sources/ \n"
 
 MIRRORS =+ "\
@@ -92,25 +88,27 @@ https://.*/.*    http://downloads.yoctoproject.org/mirror/sources/ \n"
 # The CONNECTIVITY_CHECK_URI's are used to test whether we can successfully
 # fetch from the network (and warn you if not). To disable the test set
 # the variable to be empty.
-# Git example url: git://git.yoctoproject.org/yocto-firewall-test;protocol=git;rev=HEAD
+# Git example url: git://git.yoctoproject.org/yocto-firewall-test;protocol=git;rev=master
 
 CONNECTIVITY_CHECK_URIS ?= " \
              https://eula-downloads.yoctoproject.org/index.php \
              http://bugzilla.yoctoproject.org/report.cgi"
 
 SANITY_TESTED_DISTROS ?= " \
-            poky-1.6 \n \
             poky-1.7 \n \
-            Ubuntu-12.04 \n \
+            poky-1.8 \n \
+            poky-2.0 \n \
             Ubuntu-14.04 \n \
             Ubuntu-14.10 \n \
-            Fedora-20 \n \
+            Ubuntu-15.04 \n \
+            Ubuntu-15.10 \n \
+            Fedora-21 \n \
+            Fedora-22 \n \
             CentOS-6.* \n \
             CentOS-7.* \n \
             Debian-7.* \n \
             Debian-8.* \n \
-            openSUSE-project-12.3 \n \
-            openSUSE-project-13.1 \n \
+            openSUSE-project-13.2 \n \
             "
 
 # Default hash policy for distro
@@ -121,7 +119,7 @@ BB_SIGNATURE_HANDLER ?= 'OEBasicHash'
 # that breaks the format and have been previously discussed on the mailing list 
 # with general agreement from the core team.
 #
-OELAYOUT_ABI = "10"
+OELAYOUT_ABI = "11"
 
 # add poky sanity bbclass
 INHERIT += "poky-sanity"
