meta-digi: remove gstreamer 0.10 support
Also remove QT4 phonon patches and qtmediaplayer demo as they depend on
gstreamer-0.10.

https://jira.digi.com/browse/DEL-1890

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -64,10 +64,7 @@ TCLIBCAPPEND = ""
 QEMU_TARGETS ?= "arm aarch64 i386 mips mipsel mips64 ppc x86_64"
 # Other QEMU_TARGETS "mips64el sh4"
 
-# Support MP3 audio files
-COMMERCIAL_AUDIO_PLUGINS ?= "gst-plugins-ugly-mad gst-plugins-ugly-mpegaudioparse"
-
-# Some packages like gst-plugins-ugly need this
+# Some packages need this (e.g. gstreamer1.0-plugins-ugly)
 LICENSE_FLAGS_WHITELIST += "commercial"
 
 PREMIRRORS ??= "\
