meta-digi-dey: remove 'ptest' distro feature from distro config
This distro feature adds a lot of dependences when building a
toolchain/SDK (maininly all the *-ptest packages but some more). One of
those dependences fails when building the toolchain:

warning: Removing procps-3.3.10-r0.1@cortexa9hf_vfp_neon due to file /etc/sysctl.conf conflicting with base-files-3.0.14-r89.1@ccimx6sbc
error: procps-dev-3.3.10-r0.1 requires procps = 3.3.10-r0.1

There is no functionality loss because the 'ptest' packages are just a
sort of unit testing script for each package, and we are not testing all
the open source and third party packages.

https://jira.digi.com/browse/DEL-1973

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -18,8 +18,10 @@ POKY_DEFAULT_EXTRA_RRECOMMENDS = ""
 
 DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DEFAULT_DISTRO_FEATURES}"
 
-# Remove 'wayland' feature from DEY distro
-POKY_DEFAULT_DISTRO_FEATURES_remove = "wayland"
+# Removed DISTRO_FEATURES
+#   'wayland' -> not supported at the moment
+#   'ptest'   -> fails to build QT5 toolchain
+POKY_DEFAULT_DISTRO_FEATURES_remove = "ptest wayland"
 
 # DEY image features (alphabetical order)
 FEATURE_PACKAGES_dey-audio = "packagegroup-dey-audio"
