meta-digi-arm: ccimx6sbc: add *.dtb files for SBC IDs
There are different SBC boards IDs each one having a different
device tree file in the form imx6X-ccimx6sbc-idZZZ.dtb, where:
	X is the CPU family (q=Quad/Dual, dl=DualLite/Solo).
	ZZZ is the board ID number.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

https://jira.digi.com/browse/DEL-2160

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -22,6 +22,9 @@ KERNEL_DEVICETREE ?= " \
     imx6q-ccimx6sbc-w.dtb \
     imx6q-ccimx6sbc-wb.dtb \
     imx6q-ccimx6sbc-wb-ldo-bypass.dtb \
+    imx6q-ccimx6sbc-id129.dtb \
+    imx6q-ccimx6sbc-id130.dtb \
+    imx6dl-ccimx6sbc-id131.dtb \
 "
 
 SERIAL_CONSOLES = "115200;ttymxc3"
