meta-digi: update to new github account 'digi-embedded'
As the plan is to use the same git objects (SHA1) in the internal and
github repos, also remove that internal/external SRCREV infrastructure.

https://jira.digi.com/browse/DEL-2205

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -18,4 +18,4 @@ DIGI_MTK_GIT ?= "git://stash.digi.com/"
 DIGI_GIT	 ?= "${DIGI_LOG_GIT}"
 DIGI_PKG_SRC ?= "ftp://ftp1.digi.com/support/digiembeddedyocto/source"
 
-DIGI_GITHUB_GIT ?= "git://github.com/digidotcom"
+DIGI_GITHUB_GIT ?= "git://github.com/digi-embedded"
