--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -23,6 +23,8 @@ DISTRO_FEATURES ?= "${DISTRO_FEATURES_DEFAULT} ${DISTRO_FEATURES_LIBC} ${POKY_DE
 #   'ptest'   -> fails to build QT5 toolchain
 POKY_DEFAULT_DISTRO_FEATURES_remove = "ptest wayland"
 
+GRAPHICAL_BACKEND = "${@base_contains('DISTRO_FEATURES', 'x11', 'x11', 'fb', d)}"
+
 # DEY image features (alphabetical order)
 FEATURE_PACKAGES_dey-audio = "packagegroup-dey-audio"
 FEATURE_PACKAGES_dey-bluetooth = "packagegroup-dey-bluetooth"
