meta-digi: add layer dependences
Use LAYERDEPENDS to configure the layer dependences for meta-digi-arm
and meta-digi-dey.

https://jira.digi.com/browse/DEL-1129

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -14,6 +14,9 @@ BBFILE_COLLECTIONS += "dey"
 BBFILE_PATTERN_dey := "^${LAYERDIR}/"
 BBFILE_PRIORITY_dey = "6"
 
+LAYERDEPENDS_dey  = "core digi-arm"
+LAYERDEPENDS_dey += "openembedded-layer networking-layer webserver qt5-layer"
+
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
 DIGI_OPEN_EULA_FILE = "${LAYERDIR}/DIGI_OPEN_EULA"
