meta-digi-dey: sysvinit: No getty in inittab if console disabled.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -27,7 +27,7 @@ KERNEL_DEVICETREE ?= " \
     imx6dl-ccimx6sbc-id131.dtb \
 "
 
-SERIAL_CONSOLES = "115200;ttymxc3"
+SERIAL_CONSOLES ?= "115200;ttymxc3"
 
 # Bluetooth tty
 BT_TTY ?= "ttymxc1"
