meta-digi-dey: Add dey-trustfence packagegroup and feature.
Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -33,6 +33,7 @@ FEATURE_PACKAGES_dey-examples = "packagegroup-dey-examples"
 FEATURE_PACKAGES_dey-gstreamer = "packagegroup-dey-gstreamer"
 FEATURE_PACKAGES_dey-network = "packagegroup-dey-network"
 FEATURE_PACKAGES_dey-qt = "packagegroup-dey-qt"
+FEATURE_PACKAGES_dey-trustfence = "packagegroup-dey-trustfence"
 FEATURE_PACKAGES_dey-wireless = "packagegroup-dey-wireless"
 
 # Set the PREFERRED_PROVIDER for jpeg functionality based on the MACHINE
