--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -1,39 +1,24 @@
 #@TYPE: Machine
-#@NAME: ConnectCore 6 Single Board Computer.
-#@DESCRIPTION: Machine configuration for Digi's ConnectCore 6 SBC.
+#@NAME: Starter Board for ConnectCore for i.MX6UL
+#@DESCRIPTION: Machine configuration for Digi's ConnectCore 6UL Starter Board.
 
-# Contains the ConnectCore 6 module.
-include conf/machine/include/ccimx6.inc
+# Include the machine configuration for Digi's ConnectCore 6UL.
+include conf/machine/include/ccimx6ul.inc
 
 # U-Boot configurations
 # Last one is the default (the one the symlinks point at)
-UBOOT_CONFIG ??= "ccimx6dlsbc512MB ccimx6dlsbc ccimx6qsbc2GB ccimx6qsbc512MB ccimx6qsbc"
-UBOOT_CONFIG[ccimx6dlsbc512MB] = "ccimx6dlsbc512MB_defconfig"
-UBOOT_CONFIG[ccimx6dlsbc] = "ccimx6dlsbc_defconfig"
-UBOOT_CONFIG[ccimx6qsbc2GB] = "ccimx6qsbc2GB_defconfig"
-UBOOT_CONFIG[ccimx6qsbc512MB] = "ccimx6qsbc512MB_defconfig"
-UBOOT_CONFIG[ccimx6qsbc] = "ccimx6qsbc_defconfig"
+UBOOT_CONFIG ??= "ccimx6ulstarter"
+UBOOT_CONFIG[ccimx6ulstarter] = "ccimx6ulsbc_defconfig"
 
 KERNEL_DEVICETREE ?= " \
-    imx6dl-ccimx6sbc.dtb \
-    imx6dl-ccimx6sbc-w.dtb \
-    imx6dl-ccimx6sbc-wb.dtb \
-    imx6q-ccimx6sbc.dtb \
-    imx6q-ccimx6sbc-w.dtb \
-    imx6q-ccimx6sbc-wb.dtb \
-    imx6q-ccimx6sbc-wb-ldo-bypass.dtb \
-    imx6q-ccimx6sbc-id129.dtb \
-    imx6q-ccimx6sbc-id130.dtb \
-    imx6dl-ccimx6sbc-id131.dtb \
+    imx6ul-ccimx6ulstarter.dtb \
+    imx6ul-ccimx6ulstarter-wb.dtb \
 "
 
-SERIAL_CONSOLES = "115200;ttymxc3"
+SERIAL_CONSOLES = "115200;ttymxc1"
 
 # Bluetooth tty
-BT_TTY ?= "ttymxc1"
-
-# U-Boot script to be copied to the boot image
-BOOT_SCRIPTS = "boot.scr:boot.scr"
+BT_TTY ?= "ttymxc0"
 
 # Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2"
+IMAGE_FSTYPES ?= "tar.bz2 ubifs sdcard"
