ccimx6ulstarter: remove sdcard image creation
The CC6UL does not support booting from SD card, so it does not make
sense to create a SDCARD image by default.

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -21,4 +21,4 @@ SERIAL_CONSOLES = "115200;ttymxc4"
 BT_TTY ?= "ttymxc0"
 
 # Flash image types
-IMAGE_FSTYPES ?= "tar.bz2 ubifs sdcard"
+IMAGE_FSTYPES ?= "tar.bz2 ubifs"
