ccimx6ulstarter: add device tree file for -id129 board
This device tree file corresponds to StarterBoard with ID=129
which corresponds to smart part number CC-WMX6UL-START.

Signed-off-by: Hector Palacios <hector.palacios@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -13,6 +13,7 @@ UBOOT_CONFIG[ccimx6ulstarter] = "ccimx6ulstarter_defconfig"
 KERNEL_DEVICETREE ?= " \
     imx6ul-ccimx6ulstarter.dtb \
     imx6ul-ccimx6ulstarter-wb.dtb \
+    imx6ul-ccimx6ulstarter-id129.dtb \
 "
 
 SERIAL_CONSOLES = "115200;ttymxc4"
