meta-digi-arm: trustfence-cst: fix native recipe and Makefile
This package is native only, this patch ensures it can only be built
natively and fix the following problems:
* Add openssl-native rather than openssl to the dependencies.
* Use the $(CC) $(LDFLAGS) and $(CFLAGS) that Yocto provides to avoid a
  compilation error.

Signed-off-by: Diaz de Grenu, Jose <Jose.DiazdeGrenu@digi.com>

--- a/meta-digi-arm/recipes-bsp/trustfence-cst/trustfence-cst-2.3.2/Makefile
+++ b/meta-digi-arm/recipes-bsp/trustfence-cst/trustfence-cst-2.3.2/Makefile
@@ -1,7 +1,6 @@
 TARGET = linux64/cst
 LIBS = -lfrontend -lcrypto
-CC = gcc
-CFLAGS = -g -Wall
+CFLAGS += -g -Wall
 
 .PHONY: default all clean
 
@@ -18,7 +17,7 @@ LIBS_PATH = linux64/lib
 .PRECIOUS: $(TARGET) $(OBJECTS)
 
 $(TARGET): $(OBJECTS)
-	$(CC) $(OBJECTS) $(CFLAGS) -L $(LIBS_PATH) $(LIBS) -I $(HEADERS) -o $@
+	$(CC) $(OBJECTS) $(CFLAGS) $(LDFLAGS) -L $(LIBS_PATH) $(LIBS) -I $(HEADERS) -o $@
 
 clean:
 	-rm -f *.o $(TARGET)
