--- a/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulsbc.conf
@@ -18,6 +18,8 @@ KERNEL_DEVICETREE ?= " \
 
 SERIAL_CONSOLES = "115200;ttymxc4"
 
+MACHINE_FEATURES += "second-eth"
+
 # Bluetooth tty
 BT_TTY ?= "ttymxc0"
 
