--- a/meta-digi-dey/recipes-connectivity/hostapd/hostapd-2.4/hostapd.conf
+++ b/meta-digi-dey/recipes-connectivity/hostapd/hostapd-2.4/hostapd.conf
@@ -4,14 +4,30 @@ interface=wlan0
 driver=nl80211
 
 # WPA2-AES encryption
-channel=5
-ssid=ap-wpa2aes
+ssid=ap-wpa2aes_a
 auth_algs=1
 wpa=2
 wpa_key_mgmt=WPA-PSK
 wpa_pairwise=CCMP
 wpa_passphrase=password-wpa2aes
 
-# OPEN encryption example, remove WPA2-AES setup
+# OPEN encryption --- remove WPA2-AES setup
 # channel=1
 # ssid=ap-open
+
+
+# IEEE 802.11ac
+hw_mode=a
+channel=36
+ieee80211ac=1
+ieee80211n=1
+
+# IEEE 802.11gn  --- remove IEEE 802.11ac setup
+# hw_mode=g
+# channel=5
+# ieee80211n=1
+
+
+# IEEE 802.11d - Country Code
+ieee80211d=1
+country_code=US
