--- a/meta-digi-arm/recipes-bsp/alsa-state/alsa-state/ccimx6ul/asound.conf
+++ b/meta-digi-arm/recipes-bsp/alsa-state/alsa-state/ccimx6ul/asound.conf
@@ -1,43 +1,9 @@
-pcm.btheadset {
-    type plug
-    slave {
-        pcm {
-            type bluetooth
-            device 80:57:19:B2:A1:04
-            profile "auto"
-        }
-    }
-    hint {
-        show on
-        description "BT Headset"
-    }
+pcm.imxmax98088 {
+    type hw
+    card 0
 }
-ctl.btheadset {
-  type bluetooth
+ctl.imxmax98088 {
+    type hw
+    card 0
 }
-
-pcm.btspeaker {
-    type plug
-    slave {
-        pcm {
-            type bluetooth
-            device A0:E9:DB:10:33:58
-            profile "auto"
-        }
-    }
-    hint {
-        show on
-        description "BT Speaker"
-    }
-}
-ctl.btspeaker {
-  type bluetooth
-}
-
-pcm.btspeaker_softvol
-{
-   type softvol
-   slave.pcm "btspeaker"
-   control.name "Bluetooth"
-   control.card 0
-}
+ctl.!default imxmax98088
