recovery: add recovery image types for DEY images generation
- Added the new image type 'recovery.vfat' to the DEY images
  generation process. This new image is a clone of the 'boot.vfat'
  but including the recovery ramdisk and the recovery boot script.

- Added the new image type 'recovery.ubifs' to the DEY images
  generation process. This new image is similar to the 'boot.ubifs'
  but including the recovery ramdisk and the recovery boot script.

Signed-off-by: David Escalona <david.escalona@digi.com>

--- a/meta-digi-arm/conf/machine/ccimx6sbc.conf
+++ b/meta-digi-arm/conf/machine/ccimx6sbc.conf
@@ -36,4 +36,4 @@ BT_TTY ?= "ttymxc1"
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
-IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2"
+IMAGE_FSTYPES ?= "boot.vfat ext4 sdcard tar.bz2 recovery.vfat"
