--- a/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
+++ b/meta-digi-arm/conf/machine/ccimx6ulstarter.conf
@@ -25,4 +25,4 @@ BT_TTY ?= "ttymxc0"
 BOOT_SCRIPTS = "boot.scr:boot.scr"
 
 # Flash image types
-IMAGE_FSTYPES ?= "tar.bz2 ubifs boot.ubifs"
+IMAGE_FSTYPES ?= "tar.bz2 ubifs boot.ubifs recovery.ubifs"
