--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -25,6 +25,9 @@ POKY_DEFAULT_DISTRO_FEATURES_remove = "ptest wayland"
 
 GRAPHICAL_BACKEND = "${@bb.utils.contains('DISTRO_FEATURES', 'x11', 'x11', 'fb', d)}"
 
+# Recovery initramfs image name.
+RECOVERY_INITRAMFS_IMAGE ?= "dey-image-recovery-initramfs"
+
 # DEY image features (alphabetical order)
 FEATURE_PACKAGES_dey-audio = "packagegroup-dey-audio"
 FEATURE_PACKAGES_dey-bluetooth = "packagegroup-dey-bluetooth"
