meta-digi: add 'meta-swupdate' layer to bblayers config file
https://jira.digi.com/browse/DEL-3355

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/sdk/config/ccimx6sbc/bblayers.conf.sample
+++ b/sdk/config/ccimx6sbc/bblayers.conf.sample
@@ -14,6 +14,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-openembedded/meta-networking \
   ##DIGIBASE##/meta-openembedded/meta-webserver \
   ##DIGIBASE##/meta-qt5 \
+  ##DIGIBASE##/meta-swupdate \
   ##DIGIBASE##/meta-fsl-arm \
   ##DIGIBASE##/meta-fsl-demos \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
