--- a/sdk/config/ccimx6ulsbc/bblayers.conf.sample
+++ b/sdk/config/ccimx6ulsbc/bblayers.conf.sample
@@ -14,6 +14,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-openembedded/meta-networking \
   ##DIGIBASE##/meta-openembedded/meta-webserver \
   ##DIGIBASE##/meta-qt5 \
+  ##DIGIBASE##/meta-swupdate \
   ##DIGIBASE##/meta-fsl-arm \
   ##DIGIBASE##/meta-fsl-demos \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
