swupdate: use version 2016.10
There is new functionality in that version that we need for our firmware
update solution, so append the git-based recipe and set the revision to
the 2016.10 version.

Also provide a customized build configuration file. Notice that the
defconfig file is actually a full '.config'. It needs to be a full
config file because otherwise the anonymous python function in the
recipe is not able to gather all the build time dependences.

https://jira.digi.com/browse/DEL-3355

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/distro/dey.conf
+++ b/meta-digi-dey/conf/distro/dey.conf
@@ -50,6 +50,9 @@ PREFERRED_VERSION_linux-yocto_qemumips ?= "4.1%"
 PREFERRED_VERSION_linux-yocto_qemumips64 ?= "4.1%"
 PREFERRED_VERSION_linux-yocto_qemuppc ?= "4.1%"
 
+# Use swupdate version 2016.10
+PREFERRED_VERSION_swupdate = "2016.10+git%"
+
 SDK_NAME = "${DISTRO}-${TCLIBC}-${SDK_ARCH}-${IMAGE_BASENAME}-${TUNE_PKGARCH}"
 SDKPATH = "/opt/${DISTRO}/${SDK_VERSION}"
 
