meta-digi-arm: firmware-qualcomm: qcom_cfg.ini: Recover gRoamingTime
Even though this variable is documented as unused, removing it fails
wireless regression tests.

https://jira.digi.com/browse/DEL-3501

Signed-off-by: Alex Gonzalez <alex.gonzalez@digi.com>

--- a/meta-digi-arm/recipes-bsp/firmware-qualcomm/firmware-qualcomm/wlan/qcom_cfg.ini
+++ b/meta-digi-arm/recipes-bsp/firmware-qualcomm/firmware-qualcomm/wlan/qcom_cfg.ini
@@ -54,6 +54,10 @@ gEnableSuspend=3
 # 7 = 11b only 8 = 11ac only.
 gDot11Mode=0
 
+# CSR Roaming Enable(1) Disable(0)
+
+gRoamingTime=0
+
 # Assigned MAC Addresses - This will be used until NV items are in place
 
 # Each byte of MAC address is represented in Hex format as XX
