dey-examples-cloudconnector: adapt recipe and makefiles to use static library
https://jira.digi.com/browse/DEL-3523

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/recipes-digi/dey-examples/files/cloudconnector_test/upload_data_points/Makefile
+++ b/meta-digi-dey/recipes-digi/dey-examples/files/cloudconnector_test/upload_data_points/Makefile
@@ -19,7 +19,7 @@ PROGRAM := upload_data_points
 CFLAGS += -Wall
 
 CFLAGS += $(shell pkg-config --cflags cloudconnector)
-LDLIBS += $(shell pkg-config --libs cloudconnector)
+LDLIBS += $(shell pkg-config --libs --static cloudconnector)
 
 all: $(PROGRAM)
 
