--- a/meta-digi-dey/recipes-digi/dey-examples/files/cloudconnector_test/device_request_listener/Makefile
+++ b/meta-digi-dey/recipes-digi/dey-examples/files/cloudconnector_test/device_request_listener/Makefile
@@ -19,7 +19,7 @@ PROGRAM := device_request_listener
 CFLAGS += -Wall
 
 CFLAGS += $(shell pkg-config --cflags cloudconnector)
-LDLIBS += $(shell pkg-config --libs cloudconnector)
+LDLIBS += $(shell pkg-config --libs --static cloudconnector)
 
 all: $(PROGRAM)
 
