meta-digi-dey: fix layer name
Also update LAYERDEPENDS to add 'swupdate'

https://jira.digi.com/browse/DEL-3478

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-dey/conf/layer.conf
+++ b/meta-digi-dey/conf/layer.conf
@@ -10,12 +10,12 @@ BBFILES += "${LAYERDIR}/recipes-*/*/*.bb \
 BBFILES += "${@' '.join('${LAYERDIR}/other-layers/%s/recipes*/*/*.bbappend' % layer \
                for layer in BBFILE_COLLECTIONS.split())}"
 
-BBFILE_COLLECTIONS += "dey"
-BBFILE_PATTERN_dey := "^${LAYERDIR}/"
-BBFILE_PRIORITY_dey = "6"
+BBFILE_COLLECTIONS += "digi-dey"
+BBFILE_PATTERN_digi-dey := "^${LAYERDIR}/"
+BBFILE_PRIORITY_digi-dey = "6"
 
-LAYERDEPENDS_dey  = "core digi-arm"
-LAYERDEPENDS_dey += "openembedded-layer networking-layer webserver qt5-layer"
+LAYERDEPENDS_digi-dey  = "core digi-arm"
+LAYERDEPENDS_digi-dey += "openembedded-layer networking-layer webserver qt5-layer swupdate"
 
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
