ccimx6sbc: pulseaudio: Make pulseaudio load the sgtl5000 sink
The profiles created for the sgtl5000 sound card didn't have any priorities
assigned, making pulseaudio map a different profile than before and causing the
sink to remain unloaded.

This commit fixes this by assigning a priority to each profile. The values
were taken directly from the default profile to assure that pulseaudio's
behavior is the same using one profile or the other.

https://jira.digi.com/browse/DEL-3602

Signed-off-by: Gabriel Valcazar <gabriel.valcazar@digi.com>

--- a/meta-digi-dey/recipes-multimedia/pulseaudio/pulseaudio/dey-audio-sgtl5000.conf
+++ b/meta-digi-dey/recipes-multimedia/pulseaudio/pulseaudio/dey-audio-sgtl5000.conf
@@ -30,40 +30,48 @@ auto-profiles = no
 description = Analog Mono
 device-strings = hw:%f
 channel-map = mono
+priority = 2
 
 [Mapping analog-stereo]
 description = Analog Stereo
 device-strings = hw:%f
 channel-map = left,right
+priority = 60
 
 [Profile input:analog-mono]
 description = Analog Mono Input
 input-mappings = analog-mono
 skip-probe = yes
+priority = 2
 
 [Profile input:analog-stereo]
 description = Analog Stereo Input
 input-mappings = analog-stereo
 skip-probe = yes
+priority = 60
 
 [Profile output:analog-mono]
 description = Analog Mono Output
 output-mappings = analog-mono
 skip-probe = yes
+priority = 200
 
 [Profile output:analog-mono+input:analog-mono]
 description = Analog Mono Duplex
 output-mappings = analog-mono
 input-mappings = analog-mono
 skip-probe = yes
+priority = 202
 
 [Profile output:analog-stereo]
 description = Analog Stereo Output
 output-mappings = analog-stereo
 skip-probe = yes
+priority = 6000
 
 [Profile output:analog-stereo+input:analog-stereo]
 description = Analog Stereo Duplex
 output-mappings = analog-stereo
 input-mappings = analog-stereo
 skip-probe = yes
+priority = 6060
