morty migration: meta-digi: update FSL layer name
meta-fsl-arm is no longer used for Morty release. Now the community
support is implemented in 'meta-freescale' layer.

https://jira.digi.com/browse/DEL-3451

Signed-off-by: Javier Viguera <javier.viguera@digi.com>

--- a/meta-digi-arm/conf/layer.conf
+++ b/meta-digi-arm/conf/layer.conf
@@ -9,7 +9,7 @@ BBFILE_COLLECTIONS += "digi-arm"
 BBFILE_PATTERN_digi-arm := "^${LAYERDIR}/"
 BBFILE_PRIORITY_digi-arm = "5"
 
-LAYERDEPENDS_digi-arm = "core fsl-arm"
+LAYERDEPENDS_digi-arm = "core freescale-layer"
 
 # Digi's General and Open Source license agreements
 DIGI_EULA_FILE = "${LAYERDIR}/DIGI_EULA"
