--- a/sdk/config/ccimx6ulsbc/bblayers.conf.sample
+++ b/sdk/config/ccimx6ulsbc/bblayers.conf.sample
@@ -15,7 +15,7 @@ BBLAYERS ?= " \
   ##DIGIBASE##/meta-openembedded/meta-webserver \
   ##DIGIBASE##/meta-qt5 \
   ##DIGIBASE##/meta-swupdate \
-  ##DIGIBASE##/meta-fsl-arm \
+  ##DIGIBASE##/meta-freescale \
   ##DIGIBASE##/meta-fsl-demos \
   ##DIGIBASE##/meta-digi/meta-digi-arm \
   ##DIGIBASE##/meta-digi/meta-digi-dey \
